[project]
name = "quantformer"
version = "0.1.0"
description = "Quantformer: A Transformer-based Model for Quantitative Trading"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "tqdm>=4.62.0",
    "plotly>=5.0.0",
    "wandb>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910"
]
